# FTE

./: .gitignore  GOLD_TIER_ARCHITECTURE.md  GOLD_TIER_COMPLETION_REPORT.md  GOLD_TIER_SUMMARY.md  LESSONS_LEARNED.md  LINKEDIN_API_UPDATE.md  LINKEDIN_CURRENT_STATUS.md  LINKEDIN_MONITORING_SETUP.md  LINKEDIN_MONITORING_STATUS.md  LINKEDIN_SETUP_COMPLETE.md  Plan.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  SILVER_TIER_COMPLETED.md  SILVER_TIER_COMPLETION_REPORT.md  SILVER_TIER_COMPLETION_SUMMARY.md  SILVER_TIER_STATUS_SUMMARY.md  START_LINKEDIN_METHODS.md  WEB_APP_README.md  WHATSAPP_INTEGRATION_GUIDE.md  WHATSAPP_INTEGRATION_SUMMARY.md  ai_email_assistant.py  auto_reply_system.py  claude.md  config.json  demo_linkedin_poster.py  direct_whatsapp_sender.py  fix_response_format.py  generate_response.py  interactive_email_review.py  linkedin_config.py  mcp_whatsapp_sender.py  process_email_tasks.py  pyproject.toml  run_linkedin_monitor.py  run_scheduler.py  run_whatsapp_mcp_server.py  run_whatsapp_watcher.py  send_clean_response.py  (+21 more)
.claude/: settings.local.json
.claude/skills/: approval-workflow.md  dashboard-updater.md  inbox-processor.md  linkedin-posting.md  note-creator.md  plan-reasoning.md  scheduler-skills.md  task-manager.md
src/fte/: __init__.py  gmail_watcher.py  integration_test.py  mcp_runner.py  vault_manager.py  watcher.py
src/vault/: task_schedule.json
templates/: index.html
vault/: Company_Handbook.md  Dashboard.md
vault/Done/: 20260126_123440_2-Step Verification turned on.md  20260128_133502_hi.md  20260128_134347_Meeting.md  20260128_135751_Information required.md  20260128_140354_Testing auto system.md  20260128_140553_Testing system.md  20260128_140555_Testing system.md  20260128_141600_Reply required.md  20260128_141659_Reply required.md  20260129_105519_Fwd_ Request for Installation of Two New Ceiling L.md  20260129_115235_Fwd_ Access for CMS.md  20260129_122657_Request to assign a course.md  another_test_email.md  approval_req_1769751350124_3100  approval_req_1769752362139_4202  approval_req_1769753169980_1598  linkedin_demo_content_01_20260127_133914.md  linkedin_demo_content_02_20260127_133914.md  linkedin_demo_content_03_20260127_133914.md  linkedin_demo_content_04_20260127_133914.md  sample_business_update_20260127_132801.md  schedule_followup_business_inquiry_0d_prospects@business.com  schedule_followup_business_inquiry_10d_prospects@business.com  schedule_linkedin_post_1769756400  (+4 more)
(+84 files in other folders)
