[project]
name = "fte"
version = "0.1.0"
description = "FTE Bronze Tier - Obsidian vault workflow automation with file system monitoring"
readme = "README.md"
authors = [
    { name = "Fiaz Majeed", email = "fiazcomsats@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "plyer>=2.1.0",
]

[project.scripts]
fte = "fte:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
