[project]
name = "fte"
version = "0.2.0"
description = "FTE Silver Tier - Enhanced workflow automation with watchers, LinkedIn posting, Claude reasoning, MCP server, approval workflow, and scheduling"
readme = "README.md"
authors = [
    { name = "Fiaz Majeed", email = "fiazcomsats@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "plyer>=2.1.0",
    "twilio>=8.10.0",
    "linkedin-api>=1.0.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.0",
    "schedule>=1.2.0",
]

[project.scripts]
fte = "fte:main"
fte-mcp = "fte.mcp_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
