[project]
name = "fte"
version = "1.0.0"
description = "FTE Gold Tier - Fully autonomous employee with cross-domain integration, Odoo accounting, multi-platform social media, and intelligent task execution"
readme = "README.md"
authors = [
    { name = "Fiaz Majeed", email = "fiazcomsats@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "plyer>=2.1.0",
    "twilio>=8.10.0",
    "linkedin-api>=1.0.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.0",
    "schedule>=1.2.0",
    "selenium>=4.15.0",
    "tweepy>=4.14.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
]

[project.scripts]
fte = "fte:main"
fte-mcp = "fte.mcp_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
